--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Blog De Musica</title>
 </head>
 
-<body>
+<body bgcolor="#030303">
 	<h1><a href="index.html"><img  src="imagenes/concert_logo.png" width="150px" height="80px" alt=""></a>Tu Concierto</h1>
 	<p>Bienvenido a tu blog de conciertos</p>
 	<img src="imagenes/concert.jpg" alt="concierto" width="1000px">
