--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
 <meta charset="utf-8">
 <title>Blog De Musica</title>
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 
-<body bgcolor="#030303">
-	<h1><a href="index.html"><img  src="imagenes/concert_logo.png" width="150px" height="80px" alt=""></a>Tu Concierto</h1>
-	<p>Bienvenido a tu blog de conciertos</p>
-	<img src="imagenes/concert.jpg" alt="concierto" width="1000px">
+<body>
+	<div>
+	<h1><a href="index.html"><img  src="imagenes/concert_logo.png"  height="80px" alt="" style="color:white"> </a>Tu Concierto</h1>
+	<p>Bienvenido a tu blog de conciertos...</p>
+	<img src="imagenes/concert.jpg" alt="concierto" style="width: 80%">
 	
 	<p>
 		<a href="formularios.html">Formularios |</a>
 	
 <a href="https://www.google.com" target="_blank">Google |</a>
 	<a href="html/EtiquetasDeEstructura.html"><img src="imagenes/etihtml5.png" alt="logo HTML 5" title="lOGO hTML5" width="150px" height="50px">Etiquetas |</a>
-		<a href="mailto:darios223@hotmail.com?subject=feedback"> email me</a>
+		<a href="mailto:darios223@hotmail.com?subject=feedback"> Info</a>
 		<a href="Receta_de_Cocina.html">Receta de cocina</a>
 		</p>
+		
+	</div>
 </body>
 </html>
