--- a/Receta_de_Cocina.html
+++ b/Receta_de_Cocina.html
@@ -1,21 +1,24 @@
 <!doctype html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html">
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width,user-scalable=no">
+	<link rel="stylesheet" href="css/estilos.css">
 <title>Receta de cocina</title>
 </head>
 
-<body>
-<header>
-  <h1> <img src="imagenes/recetas.jpg">Recetas.com </h1>
+<body class="CuerpoReceta">
+<header class="Menu-Receta">
+  <h1 class="titulo"> <img class="" alt="imagenfavi" src="imagenes/recetas.jpg">Recetas.com </h1>
 </header>
 <nav> <a href="">Recetas Principales |</a> <a href="">Postres</a> </nav>
-<article>
-<p>Bienvenido a nuestro sitio web sobre gastronomía latina, te invitamos a preparar nuestras recetas.</p>
 <section>
-  <h2>Nuevas Recetas</h2>
-  <h3>** Arroz Criollo **</h3>
-  <p>Tiempo de preparación: <strong>45 minutos</strong> Número de porciones <strong>4</strong></p>
+  <article>
+    <p>Bienvenido a nuestro sitio web sobre gastronomía latina, te invitamos a preparar nuestras recetas.</p>
+    <h2 class="titulo">Nuevas Recetas</h2>
+    <h3 class="resaltado">** Arroz Criollo **</h3>
+    <p>Tiempo de preparación: <strong>45 minutos</strong> Número de porciones <strong>4</strong></p>
   </article>
   <h3>Ingredientes</h3>
   <ul>
@@ -41,7 +44,7 @@
   </ol>
 </section>
 <footer>
-  <p>Esta fácil receta es una contribución de Janeth Patricia. Derechos Reservados.</p>
+  Esta fácil receta es una contribución de <span class="resaltado">Janeth Patricia.</span> Derechos Reservados.
 </footer>
 </body>
 </html>
