--- a/formularios.html
+++ b/formularios.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/estilosFormulario.css">
 <title>formulario y atributos</title>
 </head>
 
@@ -51,11 +51,13 @@
         <br>
       </select>
     </p>
+	  <p>
     <label>Comentarios</label>
     <br>
-    <textarea ></textarea>
-    <br>
-    <br>
+    <textarea></textarea>
+		  
+		  </p>
+   
     <p>
       <label>Acepto terminos y condiciones</label>
       <br>
