ejercicicios de ccs
Tablas margenes sombras tipo de letra

--- a/html/tablas.html
+++ b/html/tablas.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>tablas next university</title>
+	<link  href="../css/estilosFormulario.css" rel="stylesheet" media="screen" title="tabla" charset="utf-8">
 </head>
 
 <body>
-<table width="500" border="1">
+<table>
   <thead>
     <tr>
       <th>contendp</th>
